# ABY

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Example_Makefile  MainClass.java  Makefile  README.md  runtest_scr.sh
MATRIX/: MatrixMeasurement.h  build.sh  run.sh
cmake/: ABYConfig.cmake.in  BoostConfig.cmake.in  FindGMP.cmake  FindGMPXX.cmake  ForwardConfig.cmake.in  GMPConfig.cmake.in  GMPXXConfig.cmake.in  ImportIntoAndroidStudio.cmake.in
cmake/Modules/: ABYCacheVariables.cmake  AddBOOST_CMAKE.cmake  AddBoost.cmake  AddENCRYPTO_utils.cmake  AddGMP.cmake  AddOTExtension.cmake  AndroidCacheVariables.cmake  BuildGMP.cmake  ExternalBuildHelper.cmake  FetchBOOST_CMAKE.cmake  FetchENCRYPTO_utils.cmake  FetchHelper.cmake  FetchOTExtension.cmake  FindGMP.cmake  FindGMPXX.cmake  GetDependencies.cmake  InstallConfig.cmake  PatchBOOST_CMAKE.cmake
cmake/Modules/BOOST_CMAKEPatches/libs/: header.cmake
data_test/: README.ms  data.csv  data1.csv  data2.csv  data2_short.csv  dataS1.xlsx  dataS1_long.xlsx  dataS2.xlsx  dataS2_long.xlsx  dataSplit.py  data_splitCSV.py  lines_partitioned_test.csv  read_csv.cpp  test.xlsx  xlrs_to_csv.py
sockets/: client.py  server.py
src/abycore/: CMakeLists.txt
src/abycore/ABY_utils/: ABYconstants.h  convtypes.h  yaokey.h
src/abycore/DGK/: dgkparty.cpp  dgkparty.h  mb.c
src/abycore/DJN/: djnparty.cpp  djnparty.h
src/abycore/MATRIX/: MatrixMeasurement.h
src/abycore/aby/: abyparty.cpp  abyparty.h  abysetup.cpp  abysetup.h
src/abycore/circuit/: abycircuit.cpp  abycircuit.h  arithmeticcircuits.cpp  arithmeticcircuits.h  booleancircuits.cpp  booleancircuits.h  circuit.cpp  circuit.h  share.cpp  share.h
src/abycore/ot/: .gitignore  OTconstants.h  arithmtmasking.h  baseOT.h  maskingfunction.h  naor-pinkas.cpp  naor-pinkas.h  ot-extension.cpp  ot-extension.h  xormasking.h
src/abycore/sharing/: arithsharing.cpp  arithsharing.h  boolsharing.cpp  boolsharing.h  sharing.cpp  sharing.h  splut.cpp  splut.h  yaoclientsharing.cpp  yaoclientsharing.h  yaoserversharing.cpp  yaoserversharing.h  yaosharing.cpp  yaosharing.h
src/abycore/util/: cbitvector.cpp  cbitvector.h  channel.h  circular_queue.cpp  circular_queue.h  codewords.h  connection.cpp  connection.h  constants.h  convtypes.h  dgk.cpp  dgk.h  djn.cpp  djn.h  graycode.cpp  graycode.h  parse_options.cpp  parse_options.h  powmod.cpp  powmod.h  rcvthread.h  sndthread.h  socket.h  thread.h  timer.h  typedefs.h  yaokey.h
src/abycore/util/crypto/: TedKrovetzAesNiWrapperC.cpp  TedKrovetzAesNiWrapperC.h  crypto.cpp  crypto.h  ecc-pk-crypto.cpp  ecc-pk-crypto.h  gmp-pk-crypto.cpp  gmp-pk-crypto.h  intrin_sequential_enc8.cpp  intrin_sequential_enc8.h  pk-crypto.h
src/examples/: CMakeLists.txt
src/examples/2ABY/: CMakeLists.txt  two_aby_test.cpp
src/examples/2ABY/common/: two_aby.cpp  two_aby.h
src/examples/aby_interpreter/: CMakeLists.txt  aby_interpreter.cpp  argparse.hpp
src/examples/aby_interpreter/common/: aby_interpreter.cpp  aby_interpreter.h  ezpc.h
src/examples/addition/: CMakeLists.txt  addition_test.cpp
src/examples/addition/common/: .addition.cpp.swo  .addition.cpp.swp  addition.cpp  addition.h  demo.txt
src/examples/aes/: CMakeLists.txt  Makefile  aes_test.cpp
src/examples/aes/common/: aescircuit.cpp  aescircuit.h
src/examples/bench_operations/: CMakeLists.txt  Makefile  bench_operations.cpp
src/examples/euclidean_distance/: CMakeLists.txt  Makefile  euclidean_distance_test.cpp
src/examples/euclidean_distance/common/: euclidean_dist.cpp  euclidean_dist.h
src/examples/euclidean_shares/: two_aby_test.cpp  two_euclidean_test.cpp
src/examples/euclidean_shares/common/: two_aby.cpp  two_aby.h  two_euclidean.cpp  two_euclidean.h
src/examples/euclidean_simd/: CMakeLists.txt  euclidean_simd.cpp
src/examples/euclidean_simd/common/: euclidean_simd.cpp  euclidean_simd.h  two_euclidean.cpp
src/examples/float/: CMakeLists.txt  abyfloat.cpp
src/examples/innerproduct/: CMakeLists.txt  Makefile  innerproduct_test.cpp  run_matrix.sh
src/examples/innerproduct/common/: innerproduct.cpp  innerproduct.h
src/examples/lowmc/: CMakeLists.txt  lowmc.cpp
src/examples/lowmc/common/: lowmccircuit.cpp  lowmccircuit.h
src/examples/millionaire_prob/: CMakeLists.txt  Makefile  millionaire_prob_test.cpp
src/examples/millionaire_prob/common/: millionaire_prob.cpp  millionaire_prob.h
src/examples/min-euclidean-dist/: CMakeLists.txt  min-euclidean-dist.cpp
src/examples/min-euclidean-dist/common/: min-euclidean-dist-circuit.cpp  min-euclidean-dist-circuit.h
src/examples/multiplication/: CMakeLists.txt  multiplication_test.cpp
src/examples/multiplication/common/: multiplication.cpp  multiplication.h
src/examples/psi_2D_CH/: CMakeLists.txt  psi_2D_CH.cpp
src/examples/psi_2D_CH/common/: hashing_includes.h  psi_2D_CH_circuit.cpp  psi_2D_CH_circuit.h
src/examples/psi_2D_CH/common/hashing/: cuckoo.cpp  cuckoo.h  hashing_util.h  simple_hashing.cpp  simple_hashing.h
src/examples/psi_phasing/: CMakeLists.txt  Makefile  psi_phasing.cpp
src/examples/psi_phasing/common/: hashing_includes.h  phasing_circuit.cpp  phasing_circuit.h
src/examples/psi_phasing/common/hashing/: cuckoo.cpp  cuckoo.h  hashing_util.h  simple_hashing.cpp  simple_hashing.h
src/examples/psi_scs/: CMakeLists.txt  psi_scs.cpp
src/examples/psi_scs/common/: WaksmanPermutation.cpp  WaksmanPermutation.h  sort_compare_shuffle.cpp  sort_compare_shuffle.h
src/examples/sha1/: CMakeLists.txt  sha1_test.cpp
src/examples/sha1/common/: sha1_circuit.cpp  sha1_circuit.h
src/examples/threshold_euclidean_dist_2d_simd/: CMakeLists.txt  threshold-euclidean-dist.cpp
src/examples/threshold_euclidean_dist_2d_simd/common/: threshold-euclidean-dist.cpp  threshold-euclidean-dist.h
src/examples/uc_circuit/: CMakeLists.txt  uc_circuit_test.cpp
src/examples/uc_circuit/common/: uc_circuit.cpp  uc_circuit.h
src/test/: CMakeLists.txt  Makefile  abytest.cpp  abytest.h
