add_subdirectory(aes)
add_subdirectory(bench_operations)
add_subdirectory(euclidean_distance)
add_subdirectory(float)
add_subdirectory(innerproduct)
add_subdirectory(lowmc)
add_subdirectory(millionaire_prob)
add_subdirectory(min-euclidean-dist)
add_subdirectory(psi_phasing)
add_subdirectory(psi_scs)
add_subdirectory(sha1)
add_subdirectory(threshold_euclidean_dist_2d_simd)
add_subdirectory(uc_circuit)
